[metadata]
name = PyScriptTools
version = 4.1.3
author = Shervin Badanara (shervinbdndev)
author_email = shervin2234@gmail.com
description = Simple Python Package to Gather and Show Your System Info.
long_description = A package that allows you to Gather and Collect all of Your System Information by Calling Only methods.
url = https://github.com/shervinbdndev/PyScriptTools
project_urls = 
    Bug Tracker = https://github.com/shervinbdndev/PyScriptTools/issues
classifiers = 
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
package_dir = 
    = src
packages = find:

[option.packages.find]
where = src